[tool.poetry]
name = "stackedit-extract"
version = "0.1.0"
description = ""
authors = ["summivox <summivox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
stackedit-extract = "stackedit_extract.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
